<resources>
    <string name="app_name">Carrus Shipper</string>
    <!--Debug Google api key-->
    <string name="google_app_id">AIzaSyDxVkcbTA4dCGwZJEA9Cy_9RLKj4iURm2s</string>

    <!--Released Google api key-->
    <!--<string name="google_app_id">AIzaSyCHLcN4FVT29tkXZcOSfNRL9C9CKar6d_g</string>-->

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="drawer_open">Open</string>
    <string name="drawer_close">Close</string>
    <string name="home">Home</string>
    <string name="myprofile">My Profile</string>
    <string name="ratetruck">Rate Trucker</string>
    <string name="my_bookings">My Bookings</string>
    <string name="payments">Payments</string>
    <string name="contact">Contact Carrus</string>
    <string name="signup_header">Sign Up</string>
    <string name="signout">Sign Out</string>
    <string name="trackshipment">Track Shipment</string>
    <string name="send">SEND</string>
    <string name="forgotpasswdlable">Forgot Password</string>
    <string name="bookingdetails">Booking Details</string>
    <string name="searchshipment">Track Your Shipment</string>
    <string name="addfeedback">Add feedback here…</string>
    <string name="choose_image">Choose image from…</string>
    <string name="update_message">Do you want to update the app?</string>
    <string name="critical_update_message">Critical update found, you have to update the app</string>


    <!-- My Profile screen text-->
    <string name="company_name">COMPANY NAME</string>
    <string name="user_name">NAME</string>
    <string name="user_email">EMAIL</string>
    <string name="user_phn">PHONE NUMBER</string>
    <string name="user_add">ADDRESS</string>
    <string name="user_type_company">TYPE OF COMPANY</string>
    <string name="galery">Gallery</string>
    <string name="camera">Camera</string>


    <!-- My booking screen text-->
    <string name="upcming">Upcoming</string>
    <string name="past">Past</string>
    <string name="tryagain">Retry</string>
    <string name="exit">Exit</string>
    <string name="callcarrus">Call Carrus</string>

    <!-- Login Screen Text-->
    <string name="email">E-mail</string>
    <string name="password">Password</string>
    <string name="submit">SUBMIT</string>
    <string name="forgotpasswd">FORGOT PASSWORD ?</string>
    <string name="rememberme">&#160;&#160;Remember me</string>
    <string name="signup">NOT A MEMBER YET? SIGN UP</string>


    <!-- Signout Dialog-->
    <string name="quit">Sign Out!</string>
    <string name="really_quit">Are you sure to sign out?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>


    <!-- Booking details text-->
    <string name="ongoing">Ongoing</string>
    <string name="pickup">PICK UP</string>
    <string name="dropoff">DROP OFF</string>
    <string name="paymentmode">PAYMENT MODE</string>
    <string name="totalcost">TOTAL COST</string>
    <string name="cargodetails">CARGO DETAILS</string>
    <string name="notes">NOTES</string>
    <string name="fleetownernotes">FLEET OWNER NOTES</string>
    <string name="makepayment">MAKE PAYMENT</string>
    <string name="modify">MODIFY</string>
    <string name="done">DONE</string>
    <string name="cancel">CANCEL</string>
    <string name="viewpod">VIEW POD</string>
    <string name="viewinvoice">VIEW INVOICE</string>
    <string name="viewconsignment">VIEW CONSIGNMENT NOTE</string>
    <string name="typeofcargo">Type of Cargo</string>
    <string name="weight">Weight</string>
    <string name="crnsubject">CRN Number</string>
    <string name="share_chooser_text">Share using…</string>


    <!-- navigation drawer item labels  -->
    <string-array name="nav_drawer_labels">
        <item>@string/home</item>
        <item>@string/my_bookings</item>
        <!--<item>@string/payments</item>-->
        <item>@string/contact</item>
        <item>@string/signout</item>
    </string-array>

    <!-- naviagtion drawer icons-->
    <array name="nav_drawer_icons">
        <item>@drawable/home_btn_selector</item>
        <item>@drawable/booking_btn_selector</item>
        <!--<item>@drawable/payment_btn_selector</item>-->
        <item>@drawable/contact_btn_selector</item>
        <item>@drawable/signout_btn_selector</item>
    </array>

    <!-- Errors-->
    <string name="email_required">Email id is required</string>
    <string name="entertrackid">Tracking id is required</string>
    <string name="passwd_required">Password is required</string>
    <string name="validemail_required">Please enter valid email id</string>
    <string name="nointernetconnection">No internet connection found. Please try again</string>
    <string name="norecordfound">No Record Found</string>
    <string name="nonotesfound">No note Found</string>
    <string name="ratingerror">Rating not zero</string>
    <string name="commentrequired">Comment must not be empty</string>
    <string name="podnotfound">No POD found</string>
    <string name="invoicenotfound">No invoice found</string>
    <string name="consignmntnotfound">No consignment note found</string>
     <string name="noupcmingfound">No upcoming booking found</string>
    <string name="nopastfound">No past booking found</string>
    <string name="fieldnotempty">Field can\'t be empty</string>
    <string name="phonelimit">Phone number must be 10 digits</string>
    <string name="select_value">Please select one value</string>
    <string name="passwdnotmacth">Password not matched</string>

    <!--text-->
    <string name="forgetpasswddetails">Enter email address and link would be sent to you to reset your password</string>

    <!--Sign up screen text-->
    <string name="firstname">First Name*</string>
    <string name="lastname">Last Name*</string>
    <string name="emailid">Email ID*</string>
    <string name="password_">Password*</string>
    <string name="cnfrmpassword">Confirm Password*</string>
    <string name="companyname">Company Name*</string>
    <string name="typecompany">Type of Company</string>
    <string name="phonenumber">Mobile Number*</string>
    <string name="address">Address</string>
    <string name="state">State</string>
    <string name="city">City</string>
    <string name="country">Country</string>
    <string name="zipcode">Zip Code</string>
    <string name="shipper">SHIPPER</string>
    <string name="broker">BROKER</string>
    <string name="enterotp">Enter OTP here</string>
    <string name="enterotphere">Enter your OTP</string>

</resources>
