<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:background="@mipmap/register_bg"
    android:weightSum="1"
    android:orientation="vertical"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight=".6">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:src="@mipmap/logo"/>

    </RelativeLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        android:layout_weight=".4">

        <EditText
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@color/windowBackground"
            android:drawableLeft="@mipmap/icon_mail"
            android:drawablePadding="@dimen/ten"
            android:gravity="center_vertical"
            android:hint="@string/email"
            android:padding="@dimen/ten"/>
        <EditText
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@color/windowBackground"
            android:drawableLeft="@mipmap/icon_password"
            android:drawablePadding="@dimen/ten"
            android:gravity="center_vertical"
            android:hint="@string/password"
            android:padding="@dimen/ten"/>
        <Button
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/submit"
            style="@style/CustomTextAppearance.Bold"
            android:textColor="@color/windowBackground"
            android:background="@color/colorPrimary"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_gravity="center"
            android:padding="@dimen/ten"
            android:text="@string/forgotpasswd"
            android:textColor="@color/windowBackground"/>

    </LinearLayout>

</LinearLayout>