<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.carrustruckerapp.fragments.ProfileFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorPrimaryDark"
                android:gravity="center_horizontal"
                android:orientation="vertical">

                <RelativeLayout
                    android:id="@+id/imgLayout"
                    android:layout_width="128dp"
                    android:layout_height="128dp">

                    <ImageView
                        android:id="@+id/driverImage"
                        android:layout_width="120dp"
                        android:layout_height="120dp"
                        android:background="@mipmap/notification_icon" />

                    <Button
                        android:id="@+id/changeProfileImageBtn"
                        android:layout_width="37dp"
                        android:layout_height="37dp"
                        android:layout_alignParentRight="true"
                        android:layout_alignParentTop="true"
                        android:background="@drawable/editpic_btn_selector" />

                </RelativeLayout>

                <com.carrus.carrusshipper.utils.CapitalizedTextView
                    android:id="@+id/driverName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/five"
                    android:textColor="@color/windowBackground"
                    android:textSize="22sp" />

                <RatingBar
                    android:id="@+id/driverRating"
                    style="@style/ratingBar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginBottom="@dimen/ten"
                    android:isIndicator="true" />
                <!--android:progressDrawable="@drawable/ratingbarstars"-->
                <!--/>-->
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/big_font"
                android:layout_marginRight="@dimen/big_font"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/ten"
                    android:text="@string/company_name"
                    android:textAppearance="@style/CustomTextAppearance"
                    android:textColor="@color/gray_text"
                    android:textSize="@dimen/big_font" />

                <com.carrus.carrusshipper.utils.CapitalizedTextView
                    android:id="@+id/cmpanyNameTxtView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/six"
                    android:textAppearance="@style/CustomTextAppearance"
                    android:textColor="@color/colorPrimary"
                    android:textSize="@dimen/big_font" />


                <View
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/one"
                    android:background="@color/gray_text" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/ten"
                    android:text="@string/user_email"
                    android:textAppearance="@style/CustomTextAppearance"
                    android:textColor="@color/gray_text"
                    android:textSize="@dimen/big_font" />

                <TextView
                    android:id="@+id/emailTxtView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/six"
                    android:textAppearance="@style/CustomTextAppearance"
                    android:textColor="@color/colorPrimary"
                    android:textSize="@dimen/big_font" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/one"
                    android:background="@color/gray_text" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/ten"
                    android:text="@string/user_phn"
                    android:textAppearance="@style/CustomTextAppearance"
                    android:textColor="@color/gray_text"
                    android:textSize="@dimen/big_font" />

                <TextView
                    android:id="@+id/phoneTxtView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/six"
                    android:textAppearance="@style/CustomTextAppearance"
                    android:textColor="@color/colorPrimary"
                    android:textSize="@dimen/big_font" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/one"
                    android:background="@color/gray_text" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/ten"
                    android:text="@string/user_add"
                    android:textAppearance="@style/CustomTextAppearance"
                    android:textColor="@color/gray_text"
                    android:textSize="@dimen/big_font" />

                <TextView
                    android:id="@+id/addressTxtView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/six"
                    android:textAppearance="@style/CustomTextAppearance"
                    android:textColor="@color/colorPrimary"
                    android:textSize="@dimen/big_font" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/one"
                    android:background="@color/gray_text" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/ten"
                    android:text="@string/user_type_company"
                    android:textAppearance="@style/CustomTextAppearance"
                    android:textColor="@color/gray_text"
                    android:textSize="@dimen/big_font"
                    android:visibility="gone" />

                <TextView
                    android:id="@+id/companyTypeTxtView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/six"
                    android:textAppearance="@style/CustomTextAppearance"
                    android:textColor="@color/colorPrimary"
                    android:textSize="@dimen/big_font"
                    android:visibility="gone" />


            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</FrameLayout>
